# little-eidos-playground

./: README.md  arena.py  curiosity.py  embeddings.py  emergent_intelligence.py  engine.py  evaluator.py  executor.py  forecasting.py  generated.eidos  gh_api.py  mae_watcher.py  memory.py  observer.py  parser.py  pyproject.toml  pytest.ini  repl.py  requirements.txt  safety.py  shadow.py  state.py
.github/workflows/: arena-nightly.yml  ci.yml  daily-playground.yml  daily-run.yml  every-15min.yml  observe-loop.yml  prune-weekly.yml  prune.yml  run-daily.yml  run-nightly.yml  set-token.yml  treasure_hunter.yml  weekly-tuner.yml  weekly-visionary.yml
agents/: __init__.py  branch_pruner.py  entropy_watcher.py  mae_watcher.py  planner.py  rune_caster.py  tuner.py  visionary.py
agents/helpers/: __init__.py
config/: glyph_map.json  runes.json
docs/: README.md
forge/: __init__.py  __main__.py  new.py
forge/helper/helper_diff/: cookiecutter.json  {{cookiecutter.helper_name}}.py
forge/helper/helper_metrics/: cookiecutter.json  {{cookiecutter.helper_name}}.py
quantum_engine/: __init__.py  constants.py  engine.py  entropy.py  geometry.py  induced_metric.py  matter.py  solver.py
scripts/: ensure_treasure_hunter_branch.sh
sensors/: ai_buddy.py  gcp_rng.py
tests/: test_action_card.py  test_agents.py  test_ai_buddy.py  test_curiosity.py  test_emergent_cycle.py  test_engine.py  test_entanglement.py  test_evaluator.py  test_executor.py  test_forecasting.py  test_forge.py  test_gcp_rng.py  test_gh_api.py  test_glyph_export.py  test_memory.py  test_observer.py  test_planner.py  test_radar.py  test_rune_expand.py  test_safety.py  test_shadow.py  test_state.py  test_tuner.py  test_visionary_pr.py  test_visionary_skip.py
todo/: 2025-07-10_example.yaml
treasure-hunter/: requirements.txt
treasure-hunter/docs/: RULES.md
treasure-hunter/hunter/: __init__.py  archiver.py  config.py  crawler.py  feedback.py  filters.py  git_utils.py  main.py  scorer.py  sources.py  weights.json
ui/: app.py
visual/: radar.py
